feat: enhance automation framework with new features and refactoring
- Rename AddProductsToCartAndPlaceOrder.java to AddProductsToCartAndPlaceOrderPage.java for consistency
- Add RegisterPage.java for user registration functionality
- Implement random data generation and test data updating utilities
- Add Jira integration with JiraListener and JiraUtil
- Introduce custom annotations framework
- Enhance Excel utilities with E2EBindingColumnIndex
- Refactor base classes (BasePage, BaseTest) and page objects
- Update reporting utilities (ExtentReportManager, LogUtil, EmailSenderUtil)
- Restructure test organization with EndToEnd and SystemTest packages
- Remove obsolete OrderTest.java
- Update configuration files and test data