@@ -16,7 +16,8 @@ import java.time.format.DateTimeFormatter;
 import java.util.Properties;
 
 /**
- * Utility class for sending test execution summary emails with HTML content, inline logo, and attached report.
+ * Utility class for sending test execution summary emails with HTML content,
+ * inline logo, and attached report, using enterprise-grade security.
  */
 public final class EmailSenderUtil {
 
@@ -32,43 +33,30 @@ public final class EmailSenderUtil {
             : ConfigReader.getDecryptedProperty("smtp.password");
 
     private static final String FROM = ConfigReader.getProperty("email.from");
-    private static final String[] TO_RECIPIENTS = ConfigReader.getProperty("email.to").split(",");
-    private static final String[] CC_RECIPIENTS = ConfigReader.getProperty("email.cc").split(",");
-    private static final String[] BCC_RECIPIENTS = ConfigReader.getProperty("email.bcc").split(",");
+    private static final String[] TO_RECIPIENTS = splitEmails(ConfigReader.getProperty("email.to"));
+    private static final String[] CC_RECIPIENTS = splitEmails(ConfigReader.getProperty("email.cc"));
+    private static final String[] BCC_RECIPIENTS = splitEmails(ConfigReader.getProperty("email.bcc"));
 
+    private EmailSenderUtil() {}
 
     /**
-     * Sends an automated test execution summary email.
-     * <p>
-     * This method composes and sends an HTML email with:
-     * <ul>
-     *     <li>An embedded inline logo</li>
-     *     <li>A formatted summary of total, passed, and failed test counts</li>
-     *     <li>The attached HTML report</li>
-     * </ul>
-     * It supports TLS-secured SMTP with authentication and respects configurations
-     * from the framework's `config.properties` file.
+     * Sends an automated test execution summary email with summary, HTML report, and inline logo.
+     * Recipients and SMTP config are sourced from application config.
      *
-     * <p>Recipients (To, CC, BCC) and logo path are dynamically resolved.
-     * <p>This utility is typically invoked after test suite execution completes.
-     *
-     * @param totalTests  total number of test cases executed
-     * @param testsPassed total number of tests passed
-     * @param testsFailed total number of tests failed
+     * @param totalTests  total executed
+     * @param testsPassed number passed
+     * @param testsFailed number failed
      */
     public static void sendTestResultEmail(int totalTests, int testsPassed, int testsFailed) {
-        // Resolve report file path from ExtentReport manager
         String reportPath = ExtentReportManager.INSTANCE.getReportPath();
         logger.info("Attaching report from: {}", reportPath);
 
-        // Configure SMTP session properties
         Properties props = new Properties();
         props.put("mail.smtp.auth", "true");
         props.put("mail.smtp.starttls.enable", "true");
         props.put("mail.smtp.host", SMTP_HOST);
         props.put("mail.smtp.port", SMTP_PORT);
 
-        // Authenticate session using provided credentials
         Session session = Session.getInstance(props, new Authenticator() {
             protected PasswordAuthentication getPasswordAuthentication() {
                 return new PasswordAuthentication(USERNAME, PASSWORD);
@@ -78,7 +66,7 @@ public final class EmailSenderUtil {
         try {
             MimeMessage message = new MimeMessage(session);
 
-            // Set sender's email address with friendly display name
+            // Set from with fallback if encoding fails
             try {
                 message.setFrom(new InternetAddress(FROM, DISPLAY_NAME));
             } catch (UnsupportedEncodingException e) {
@@ -86,36 +74,34 @@ public final class EmailSenderUtil {
                 message.setFrom(new InternetAddress(FROM));
             }
 
-            // Add recipients from config
             addRecipients(message, Message.RecipientType.TO, TO_RECIPIENTS);
             addRecipients(message, Message.RecipientType.CC, CC_RECIPIENTS);
             addRecipients(message, Message.RecipientType.BCC, BCC_RECIPIENTS);
 
-            // Set email subject with timestamp
             String subjectTime = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
             message.setSubject("Automation POC - Test Execution Report - " + subjectTime);
 
-            // ─── Build Multipart Email with Inline Logo ───────────────────────
-
             Multipart multipart = new MimeMultipart("related");
 
-            // 1. HTML body part with embedded summary and logo reference
+            // 1. HTML summary
             MimeBodyPart htmlBody = new MimeBodyPart();
             String htmlContent = buildHtmlContent(totalTests, testsPassed, testsFailed);
             htmlBody.setContent(htmlContent, "text/html; charset=utf-8");
             multipart.addBodyPart(htmlBody);
 
-            // 2. HTML report file as downloadable attachment
-            MimeBodyPart attachmentPart = new MimeBodyPart();
-            attachmentPart.attachFile(new File(reportPath));
-            multipart.addBodyPart(attachmentPart);
+            // 2. Attach HTML report
+            if (reportPath != null && !reportPath.isBlank() && new File(reportPath).exists()) {
+                MimeBodyPart attachmentPart = new MimeBodyPart();
+                attachmentPart.attachFile(new File(reportPath));
+                multipart.addBodyPart(attachmentPart);
+            } else {
+                logger.warn("HTML report file not found for attachment: {}", reportPath);
+            }
 
-            // Finalize the composed message
             message.setContent(multipart);
 
-            // Dispatch the email
             Transport.send(message);
-            logger.info("Email sent successfully!");
+            logger.info("Test execution report email sent successfully!");
 
         } catch (Exception e) {
             logger.error("Failed to send test result email.", e);
@@ -123,16 +109,15 @@ public final class EmailSenderUtil {
     }
 
     /**
-     * Returns the current system date and time formatted as "yyyy-MM-dd HH:mm:ss".
-     *
-     * @return Formatted datetime string
+     * Utility: splits a comma-separated email string into an array, handles null/empty.
      */
-    private static String getCurrentDateTime() {
-        return LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+    private static String[] splitEmails(String emails) {
+        if (emails == null || emails.isBlank()) return new String[0];
+        return emails.split("\\s*,\\s*");
     }
 
     /**
-     * Adds multiple recipients to the message.
+     * Adds multiple recipients to the MimeMessage.
      */
     private static void addRecipients(MimeMessage message, Message.RecipientType type, String[] recipients)
             throws MessagingException {
@@ -144,24 +129,17 @@ public final class EmailSenderUtil {
     }
 
     /**
-     * Builds dynamic HTML body content summarizing the test execution,
-     * including the inline logo at the top.
-     *
-     * @param totalTests  Total number of executed tests
-     * @param testsPassed Passed tests count
-     * @param testsFailed Failed tests count
-     * @return Formatted HTML string
+     * Builds HTML body summarizing the test execution, including logo.
      */
     private static String buildHtmlContent(int totalTests, int testsPassed, int testsFailed) {
         double passPct = totalTests == 0 ? 0 : (testsPassed * 100.0 / totalTests);
         double failPct = totalTests == 0 ? 0 : (testsFailed * 100.0 / totalTests);
-        String executionDate = getCurrentDateTime();
+        String executionDate = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
 
-        String template = """
+        return """
         <html>
            <body style="font-family: Arial, sans-serif; font-size: 14px; background-color: #f9f9f9;">
-              <!-- Top header row with title and logo -->
-              <table width="100%" style="border: none; margin: 50; padding: 0;">
+              <table width="100%%" style="border: none; margin: 50; padding: 0;">
                  <tr style="vertical-align: middle;">
                     <td align="left">
                        <h2 style="color: #007B04; margin: -30px 0 0 0;">Project: <span style="font-weight: bold;">Automation POC</span></h2>
@@ -174,8 +152,7 @@ public final class EmailSenderUtil {
               </table>
               <p style="margin-top: -25px;">Hi Team,</p>
               <p>The automation execution has completed. Please find the summary below:</p>
-              <!-- Execution summary table -->
-              <table border="1" cellpadding="10" cellspacing="0" style="border-collapse: collapse; width: 60%;">
+              <table border="1" cellpadding="10" cellspacing="0" style="border-collapse: collapse; width: 60%%;">
                  <thead style="background-color: #e6f7ff;">
                     <tr style="text-align: center;">
                        <th>Execution Date</th>
@@ -186,10 +163,10 @@ public final class EmailSenderUtil {
                  </thead>
                  <tbody>
                     <tr style="text-align: center;">
-                       <td>{{DATE}}</td>
-                       <td>{{TOTAL}}</td>
-                       <td style="color: green;">{{PASS}} ({{PASS_PCT}}%)</td>
-                       <td style="color: red;">{{FAIL}} ({{FAIL_PCT}}%)</td>
+                       <td>%s</td>
+                       <td>%d</td>
+                       <td style="color: green;">%d (%.2f%%)</td>
+                       <td style="color: red;">%d (%.2f%%)</td>
                     </tr>
                  </tbody>
               </table>
@@ -197,14 +174,8 @@ public final class EmailSenderUtil {
               <p style="color: #999;">This is an automated email from the Automation Framework.</p>
            </body>
         </html>
-        """;
-
-        return template
-                .replace("{{DATE}}", executionDate)
-                .replace("{{TOTAL}}", String.valueOf(totalTests))
-                .replace("{{PASS}}", String.valueOf(testsPassed))
-                .replace("{{FAIL}}", String.valueOf(testsFailed))
-                .replace("{{PASS_PCT}}", String.format("%.2f", passPct))
-                .replace("{{FAIL_PCT}}", String.format("%.2f", failPct));
+        """.formatted(
+                executionDate, totalTests, testsPassed, passPct, testsFailed, failPct
+        );
     }
 }
